# macos-fingerprint

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/macos_fingerprint/: __init__.py  __main__.py  cli.py  gui.py
src/macos_fingerprint/audit/: __init__.py  agent.py  cis.py  html_report.py
src/macos_fingerprint/collectors/: __init__.py  apps.py  base.py  developer.py  network.py  security.py  system.py  user.py
src/macos_fingerprint/core/: __init__.py  comparison.py  fingerprint.py  storage.py
src/macos_fingerprint/gui/: __init__.py  app.py  tabs.py  workers.py
src/macos_fingerprint/utils/: __init__.py  commands.py  config.py  crypto.py
tests/: conftest.py  test_agent.py  test_cis_audit.py  test_cli.py  test_collectors.py  test_commands.py  test_comparison.py  test_config.py  test_crypto.py  test_fingerprint.py  test_html_report.py  test_storage.py
