[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macos-fingerprint"
version = "2.0.0"
description = "Comprehensive macOS system fingerprinting tool"
readme = "README.md"
authors = [
    {name = "macOS Fingerprint Contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS :: MacOS X",
]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
gui = ["PyQt5>=5.15.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.2.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
macos-fingerprint = "macos_fingerprint.cli:main"
macos-fingerprint-gui = "macos_fingerprint.gui:main"

[project.urls]
Homepage = "https://github.com/star7js/macos-fingerprint"
"Bug Tracker" = "https://github.com/star7js/macos-fingerprint/issues"
